Refactor medRoutes and medUsageController
